--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: sequence
 description: Sequence Game
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.1 <3.0.0'
+  sdk: ">=2.18.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,23 +34,24 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-   - assets/images/
-   - assets/sounds/
+    - assets/images/
+    - assets/sounds/
+    - assets/
 
   fonts:
-   - family: Montserrat
-     fonts:
-       - asset: assets/fonts/Montserrat-Regular.ttf
-       - asset: assets/fonts/Montserrat-Light.ttf
-         weight: 100
-       - asset: assets/fonts/Montserrat-Light.ttf
-         weight: 200
-       - asset: assets/fonts/Montserrat-Medium.ttf
-         weight: 600
-       - asset: assets/fonts/Montserrat-Bold.ttf
-         weight: 800
-       - asset: assets/fonts/Montserrat-ExtraBold.ttf
-         weight: 900
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Light.ttf
+          weight: 100
+        - asset: assets/fonts/Montserrat-Light.ttf
+          weight: 200
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 600
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 800
+        - asset: assets/fonts/Montserrat-ExtraBold.ttf
+          weight: 900
 
 flutter_icons:
   android: "new_launch"
