--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   audioplayers: ^5.2.1
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
+  firebase_crashlytics: ^3.4.15
+  firebase_analytics: ^10.8.6
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
