--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: LAIN
+name: lain
 description: Word Game
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -14,18 +14,20 @@ dependencies:
   # UI
   cupertino_icons: ^1.0.2
   page_transition: ^2.0.9
-  playing_cards: ^0.4.1+11
 
-  #state management
+  # state management
   provider: ^6.0.5
 
   # controllers
   audioplayers: ^5.2.1
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
+
+  # firebase
   firebase_crashlytics: ^3.4.15
   firebase_analytics: ^10.8.6
   firebase_core: ^2.25.4
+  firebase_performance: ^0.9.3+14
 
 dev_dependencies:
   flutter_test:
