--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_analytics: ^10.8.6
   firebase_core: ^2.25.4
   firebase_performance: ^0.9.3+14
+  package_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
